--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -2,30 +2,36 @@
 <html>
     <head>
         <title>{{title}}</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        
         <link rel="stylesheet" href="css/styles.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     </head>
-    <body>
-        <div class="collapse" id="navbarToggleExternalContent">
-            <div class="bg-dark p-4">
-                <h5 class="text-white h4">Collapsed content</h5>
-                <span class="text-muted">Toggleable via the navbar brand.</span>
-            </div>
+    <body> 
+         <div id="main">
+             <span onclick="openNav()"><button class="btn1"><i class="fa fa-bars"></i>Menu</button></span>
         </div>
-        <nav class="navbar navbar-dark bg-dark">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-        </nav>
+        <div id="mySidenav" class="sidenav">
+            
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Clients</a>
+            <a href="#">Contact</a>
+        </div>
+        
+        <!-- Use any element to open the sidenav -->
+        
+        
+        <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
+        <div id="main">
+        
+        </div>
+        
         <div class="main-content">
             {{>header}}
             <article class="widget">
-                <form class="weatherLocation"><input placeholder="location..." type = "text"/><button>Seach</button>
+                <form class="weatherLocation"><input placeholder="location..." type = "text"/><button class="btn2">Search</button>
                 </form>
                 <div class="weatherIcon"><i class="wi wi-day-cloudy"></i></div>
                 <div class="weatherInfo">
@@ -38,6 +44,7 @@
                 <div class="date"></div>
             </article>
         </div>
-        <script src="js/app.js"></script> <!-- absolute path -->
+        <script src="js/app.js"></script>
+         <!-- absolute path -->
     </body>
 </html>
