--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -15,8 +15,7 @@
             
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Clients</a>
+        
             <a href="#">Contact</a>
         </div>
         
@@ -24,12 +23,12 @@
         
         
         <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
-        <div id="main">
-        
+        <div id="main-content">
+           {{>header}}
         </div>
         
         <div class="main-content">
-            {{>header}}
+            
             <article class="widget">
                 <form class="weatherLocation"><input placeholder="location..." type = "text"/><button class="btn2">Search</button>
                 </form>
